# Computacao-Grafica

./: .gitignore  README.md
CG-GRUPO-17/engine/: CMakeLists.txt  Grupo.h  Translacao.cpp  main.cpp  xmlParser.cpp
CG-GRUPO-17/generator/: CMakeLists.txt
CMAKE/engine/: CMakeLists.txt  Cena.cpp  Cena.h  Directional.cpp  Directional.h  Figura.cpp  Figura.h  FiguraCor.cpp  FiguraCor.h  FiguraDifusa.cpp  FiguraDifusa.h  FiguraTextura.cpp  FiguraTextura.h  Grupo.cpp  Grupo.h  Luz.cpp  Luz.h  PointLight.cpp  PointLight.h  Ponto.cpp  Ponto.h  Rotacao.cpp  Rotacao.h  RotacaoDinamica.cpp  RotacaoDinamica.h  Scale.cpp  Spot.cpp  Spot.h  Transformacao.cpp  Translacao.cpp  Translacao.h  TranslacaoDinamica.cpp  TranslacaoDinamica.h  main.cpp  xmlParser.cpp  xmlParser.h
CMAKE/generator/: CMakeLists.txt  Patch.cpp  Patch.h  Patches.cpp  Patches.h  Ponto.cpp  Ponto.h  Ponto2D.cpp  Ponto2D.h  main.cpp
Gerador/: Gerador.sln
Gerador/Debug/: Gerador.ilk
Gerador/Gerador/: Gerador.cpp  Gerador.vcxproj  Gerador.vcxproj.filters
engine/: box.3d  box.xml  cone.3d  cone.xml  engine.sln  newTeste.xml  plane.3d  plane.xml  sistema_solar.xml  sphere.3d  sphere.xml  teste.xml  xpto.3d
engine/Debug/: engine.ilk
engine/Release/: engine.iobj  engine.ipdb
engine/engine/: Box.cpp  Box.h  Cena.cpp  Cena.h  Cone.cpp  Cone.h  DrawShape.h  DrawSphere.cpp  DrawSphere.h  Figura.cpp  Figura.h  Grupo.cpp  Grupo.h  Interpretador.cpp  Interpretador.h  Plane.cpp  Plane.h  Rotacao.cpp  Rotacao.h  Scale.cpp  Scale.h  Shape.cpp  Shape.h  Sphere.h  Transformacao.cpp  Vertice.h  (+9 more)
generator/: generator.sln
(+106 files in other folders)
